--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>SignalR cljs</h1>
-    <script src="main.js"></script>
+    <script src="example.js"></script>
   </body>
 </html>
